--- a/flask_trial_run/templates/calculator.html
+++ b/flask_trial_run/templates/calculator.html
@@ -1,4 +1,4 @@
-<a style='color:white' href='/index' id=myButton>Return to Home</a>
+<a style='color:white' href='/' id=myButton>Return to Home</a>
 {% extends 'base.html' %}
 {% block content %}
 <body>
@@ -9,7 +9,7 @@
       <fieldset>
         <legend><h2 style='text-align: center;'>Personal Statement</h2></legend>
           <p style='text-align: center;'>An ardent student who strives to consistently enrich the lives of peers and followers. A reflective leader proven to effectively organize and shepherd various groups.</p>
-          <p style='text-align: center;'>As I step into college and the next stage of my life, I am eager to begin putting to use the skills that I have been studying for multiple years, and that I will continue to study, both in the workplace and in my personal life.</p>
+          <p style='text-align: center;'>As I step into college and the next stage of my life, I am eager to begin applying the skills that I have been studying for multiple years.</p>
         </fieldset><br>
       <fieldset>
         <legend style='text-align: center;'><h2>Education</h2></legend>
@@ -43,7 +43,7 @@
           <p><span class='tab'></span>Responsible for the production of live worship and broadcasting live feeds between church locations. Serving on a team of generally 3-5 people, I have worked as the broadcast manager, both for routine Sunday services and annual conferences, and as the audio-video relay switcher directly with the program director.</p>
         <br>
         <h3><b>Youth Corps Leadership Program</b></h3>
-          <h5>Graduate, Mentor, Team Leader: April 2018 - Present</h5>
+          <h5>Graduate, Mentor, Team Leader: August 2016 - Present</h5>
           <p><span class="tab"></span>After going through the program as a student, I returned at each opportunity available to assist the program leadership in conducting interviews, orientation sessions, and for leading small groups of seven to eight as the sole leader over weekend retreats and during day sessions. Additionally, I have served as the featured speaker as to the impact of the program for two consecutive, annual luncheon events.</p>
         <br>
         <h3><b>Oliver Gospel Mission</b></h3>
