--- a/flask_trial_run/templates/letter.html
+++ b/flask_trial_run/templates/letter.html
@@ -1,12 +1,12 @@
-<a style='color:white' href='/index' id=myButton>Return to Home</a>
+<a style='color:white' href='/' id=myButton>Return to Home</a>
 {% extends 'base.html' %}
 {% block content %}
 <body>
     <body id="resumegrad" style="font-size:18px; color:aliceblue"></body>
         <h1 style='text-align: center;'>Reid Taylor<span class="half"></span>-<span class='half'></span>RBTaylor@email.sc.edu</h1>
         <fieldset>
-            <legend style='text-align: center;'><h2>Cover Letter (This was written for you!)</h2></legend>
-            <p>{{name}}:</p>
+            <legend style='text-align: center;'><h2>Cover Letter</h2></legend>
+            <p>To whom it may concern:</p>
             <p><span class="tab"></span>As a first-year junior at the University of South Carolina pursuing a bachelor’s degree in Mathematics, I am applying for internships that would allow me to apply my analytical skills and adept ability to organize team efforts to approach novel and expansive problems. Additionally, I am seeking to employ my skills in computer science, both in Python and R with data science, data manipulation, and machine learning. Furthermore, in the workplace I am strongly committed to providing my peers with ardent leadership and ensuring synchrony among team members.</p>
             <p><span class="tab"></span>My education in mathematics and applied physics has further enabled me to reason deductively and to approach any problem with a sound approach and consideration for any possible confounding variables, as well as with respect to all moving parts of any given situation. Additionally, my background in computer science, spanning back nearly a year now, is constantly expanding and provides me with an ability to exemplify my learning and my work through valuable applications, web-based projects, and data visualizations for nearly any task. This background in computer science extends to an adept level of study of data science with the Python language, as well as Python’s machine learning capabilities (which I am currently studying), and constantly increasing mastery over R.</p>
             <p><span class="tab"></span>My experience with service-based organizations and with program leadership (through multiple years’ involvement with the Youth Corps Leadership Program and with NewSpring Church, as well as multiple months with the Oliver Gospel Mission) has helped to teach me how to shift team dynamics towards a constant growth mindset, how to ensure every member of a group feels engaged and valued, and how to optimize team performance; all while enriching the lives of those I lead, those I work with, and those I serve under.</p>
