--- a/flask_trial_run/templates/upload.html
+++ b/flask_trial_run/templates/upload.html
@@ -1,4 +1,4 @@
-<a style='color:rgb(0, 0, 0)' href='/index' id=myButton>Return to Home</a>
+<a style='color:rgb(0, 0, 0)' href='/' id=myButton>Return to Home</a>
 {% extends 'base.html' %}
 {% block content %}
 <body id="grad" style="font-size:18px; color:white">
