--- a/flask_trial_run/templates/upload.html
+++ b/flask_trial_run/templates/upload.html
@@ -177,7 +177,7 @@
     <fieldset>
       <legend><h2 style='text-align:center'>Attributions</h2></legend>
       <p>The source code for this project is available on GitHub at the following link:</p>
-      <p><span class="tab"></span><href>My GitHub Account Link</href>
+      <a style='color:black' href='https://github.com/Rascal-Rehab/WebApp'><span class="tab"></span>My GitHub Account Link</a><br>
       <p>This project was made possible by the following datasets:</p>
       <a style='color:black' href=https://www.bea.gov/data/gdp/gdp-county-metro-and-other-areas'><span class='tab'></span>GDP Data</a><br>
       <a style='color:black' href='https://simplemaps.com/data/us-cities'><span class='tab'></span>Latitude and Longitude Data</a><br>
